fixed size of work boxes on mobile query

--- a/style.css
+++ b/style.css
@@ -629,8 +629,8 @@ html {
         margin-left: -1em;
     }
     .worksec .centerboxes .portfolio-box {
-        width: 370px;
-        height: 450px;
+        width: 300px;
+        height: 370px;
         padding: 2em;
     }
     .worksec .centerboxes .athenahacks-box {
